# datalog-interpreter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Scanner.h  Token.h  main.cpp  notes.md  scratch.txt
passoff/: run-tests-proj1.sh
passoff/project1-passoff/: datalog_interpreter
src/: DatalogProgram.h  Parameter.h  Parser.h  Predicate.h  Rule.h  Scanner.h  Token.h  main.cpp
src/Database/: Database.h  Relation.h  Scheme.h  Tuple.h
src/Interpreter/: Interpreter.h
src/Parser/: DatalogProgram.h  Parameter.h  Parser.h  Predicate.h
src/Scanner/: Token.h
tests/: run-tests-proj1.sh  run-tests-proj2.sh
tests/project1-passoff/: datalog_interpreter
